plugins {
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
}

group = 'me.vjgallego'
version = '1.0.3'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.microsoft.playwright:playwright:1.47.0'
    implementation 'com.github.jknack:handlebars:4.4.0'
    implementation 'net.lingala.zip4j:zip4j:2.11.5'
}

wrapper {
    gradleVersion = "8.10.2"
}




